dummy app basic test

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,3 +1,10 @@
-<h2 id="title">Welcome to Ember</h2>
+<Input @value={{this.newName}} />
 
-{{outlet}}
+<button
+  {{on "click" this.changeName}}
+  type="button"
+>
+  Change name
+</button>
+
+<Demo @name={{this.name}} />
