support objects and methods

--- a/test-apps/new-app/app/components/dummy/template.hbs
+++ b/test-apps/new-app/app/components/dummy/template.hbs
@@ -1,5 +1,5 @@
 <div ...attributes>
-  <div data-test-name>
-    {{this.name}}
-  </div>
+  <div data-test-first-name>{{this.firstName}}</div>
+  <div data-test-last-name>{{this.lastName}}</div>
+  <div data-test-object-properties>{{this.objectProperties}}</div>
 </div>
