remove temporary demo component

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,10 +1,1 @@
-<Input @value={{this.newName}} />
-
-<button
-  {{on "click" this.changeName}}
-  type="button"
->
-  Change name
-</button>
-
-<Demo @name={{this.name}} />
+{{outlet}}
